--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^5.0.0
+  image_picker: ^0.6.6+5
 
 
   # The following adds the Cupertino Icons font to your application.
