--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -34,6 +34,11 @@
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.21</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
