--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -71,6 +71,7 @@
                     </args>
                     <compilerPlugins>
                         <plugin>spring</plugin>
+                        <plugin>jpa</plugin>
                     </compilerPlugins>
                 </configuration>
                 <dependencies>
