--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>postgresql</artifactId>
             <version>42.2.21</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.5.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
