--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -25,11 +25,8 @@ dependencies:
     sdk: flutter
   provider: ^5.0.0
   image_picker: ^0.7.5+3
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get_it: ^7.1.3
 
 dev_dependencies:
   flutter_test:
