--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   image_picker: ^0.7.5+3
   cupertino_icons: ^1.0.2
   get_it: ^7.1.3
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
