--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   sqflite: ^2.0.0+3
   path: ^1.8.0
   uuid: ^3.0.4
+  firebase_core: ^1.3.0
+  firebase_messaging: ^10.0.2
 
 dev_dependencies:
   flutter_test:
