--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -40,9 +40,9 @@
             <version>42.2.21</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-core</artifactId>
-            <version>5.5.0</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>2.5.1</version>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
