--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   uuid: ^3.0.4
   firebase_core: ^1.3.0
   firebase_messaging: ^10.0.2
+  flutter_secure_storage: ^4.2.0
 
 dev_dependencies:
   flutter_test:
