--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_core: ^1.3.0
   firebase_messaging: ^10.0.2
   flutter_secure_storage: ^4.2.0
+  holding_gesture: ^1.1.0
 
 dev_dependencies:
   flutter_test:
