Changed flutter.yml workflow to only trigger on changes to mobile directory

--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -8,8 +8,12 @@ name: Dart
 on:
   push:
     branches: [ development-frontend ]
+    paths:
+    - 'mobile/**'
   pull_request:
     branches: [ development-frontend ]
+    paths:
+    - 'mobile/**'
 
 jobs:
   build:
