--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,8 +6,12 @@ name: Java CI with Maven
 on:
   push:
     branches: [ development-backend ]
+    paths:
+    - 'backend/**'
   pull_request:
     branches: [ development-backend ]
+    paths:
+    - 'backend/**'
 
 jobs:
   build:
