--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-spring.datasource.url=jdbc:postgresql://${db_host}:${db_port}/${db_name}
-spring.datasource.username=${db_user}
-spring.datasource.password=${db_password}
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
-
 #TODO Fix Warning
+spring.data.dynamodb.entity2ddl.auto=create
+spring.data.dynamodb.entity2ddl.gsiProjectionType=ALL
+spring.data.dynamodb.entity2ddl.readCapacity=10
+spring.data.dynamodb.entity2ddl.writeCapacity=1
+
+amazon.dynamodb.endpoint=${dynamo_db_endpoint}
+amazon.aws.accessKey=${aws_access_key}
+amazon.aws.secretKey=${aws_secret_key}
+
 jwt.secret=${jwt_secret}
-fcm.serverKey=${fcm_serverKey}
+fcm.serverKey=${fcm_server_key}
