--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -1,9 +1,11 @@
-spring.datasource.url=jdbc:h2:mem:test
-spring.datasource.username=test
-spring.datasource.password=test
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.data.dynamodb.entity2ddl.auto=create
+spring.data.dynamodb.entity2ddl.gsiProjectionType=ALL
+spring.data.dynamodb.entity2ddl.readCapacity=10
+spring.data.dynamodb.entity2ddl.writeCapacity=1
+
+amazon.dynamodb.endpoint=http://localhost:8000
+amazon.aws.accessKey=test
+amazon.aws.secretKey=test
 
 fcm.serverKey=test
 jwt.secret=PKJASOPDM0219MLBER2MOASUDF8HSVY677BSYBDYn7
