--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,4 @@
-spring.datasource.url=jdbc:postgresql://${db_host}:${db_port}/${db_name}
-spring.datasource.username=${db_user}
-spring.datasource.password=${db_password}
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.data.mongodb.uri=mongodb://${mongo_host}/${mongo_db_name}
 
 #TODO Fix Warning
 jwt.secret=${jwt_secret}
