Updated flutter.yml to execute on pushes/pull requests to development

--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -7,9 +7,13 @@ name: Dart
 
 on:
   push:
-    branches: [ development-frontend ]
+    branches: [ development ]
+    paths:
+    - 'backend/**'
   pull_request:
-    branches: [ development-frontend ]
+    branches: [ development ]
+    paths:
+    - 'backend/**'
 
 jobs:
   build:
