--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -9,11 +9,11 @@ on:
   push:
     branches: [ development ]
     paths:
-    - 'backend/**'
+    - 'mobile/**'
   pull_request:
     branches: [ development ]
     paths:
-    - 'backend/**'
+    - 'mobile/**'
 
 jobs:
   build:
