--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_messaging: ^10.0.2
   flutter_secure_storage: ^4.2.0
   holding_gesture: ^1.1.0
+  web_socket_channel: ^2.1.0
 
 dev_dependencies:
   flutter_test:
