--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_secure_storage: ^4.2.0
   holding_gesture: ^1.1.0
   web_socket_channel: ^2.1.0
+  flutter_svg: ^0.22.0
 
 dev_dependencies:
   flutter_test:
@@ -56,10 +57,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   - assets/atbash.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
