--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   holding_gesture: ^1.1.0
   web_socket_channel: ^2.1.0
   flutter_svg: ^0.22.0
+  flutter_local_notifications: ^6.0.0
 
 dev_dependencies:
   flutter_test:
