--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -62,3 +62,19 @@ Resources:
       SSESpecification:
         SSEEnabled: true
       TableName: !Ref TableUsers
+
+  MessagesTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      AttributeDefinitions:
+        - AttributeName: 'id'
+          AttributeType: 'S'
+      KeySchema:
+        - AttributeName: 'id'
+          KeyType: 'HASH'
+      ProvisionedThroughput:
+        ReadCapacityUnits: 5
+        WriteCapacityUnits: 5
+      SSESpecification:
+        SSEEnabled: true
+      TableName: !Ref TableMessages
