--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -137,3 +137,10 @@ Resources:
             TableName: !Ref MessagesTable
         - DynamoDBReadPolicy:
             TableName: !Ref ConnectionsTable
+
+  AtbashWebSocket:
+    Type: AWS::ApiGatewayV2::Api
+    Properties:
+      Name: atbash-online
+      ProtocolType: WEBSOCKET
+      RouteSelectionExpression: '$request.body.action'
