Fixed spelling error in SendMessageIntegration

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -210,7 +210,7 @@ Resources:
   SendMessageIntegration:
     Type: AWS::ApiGatewayV2::Integration
     DependsOn:
-      - SendMessageFunctionm
+      - SendMessageFunction
       - AtbashWebSocket
     Properties:
       ApiId: !Ref AtbashWebSocket
