--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -216,3 +216,19 @@ Resources:
       ApiId: !Ref AtbashWebSocket
       IntegrationType: AWS_PROXY
       IntegrationUri: arn:aws:apigateway:${AWS::REGION}:lambda:path/2015-03-31/functions/${SendMessageFunction.Arn}/invocations
+
+  AtbashWebSocketDeployment:
+    Type: AWS::ApiGatewayV2::Deployment
+    DependsOn:
+      - ConnectRoute
+      - DisconnectRoute
+      - SendMessageRoute
+    Properties:
+      ApiId: !Ref AtbashWebSocket
+
+  AtbashWebSocketStage:
+    Type: AWS::ApiGatewayV2::Stage
+    Properties:
+      ApiId: !Ref AtbashWebSocket
+      StageName: dev
+      DeploymentId: !Ref AtbashWebSocketDeployment
