--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -166,7 +166,7 @@ Resources:
     Properties:
       ApiId: !Ref AtbashWebSocket
       IntegrationType: AWS_PROXY
-      IntegrationUri: arn:aws:apigateway:${AWS::REGION}:lambda:path/2015-03-31/functions/${OnConnectFunction.Arn}/invocations
+      IntegrationUri: !Sub arn:aws:apigateway:${AWS::REGION}:lambda:path/2015-03-31/functions/${OnConnectFunction.Arn}/invocations
 
   DisconnectRoute:
     Type: AWS::ApiGatewayV2::Route
@@ -186,7 +186,7 @@ Resources:
     Properties:
       ApiId: !Ref AtbashWebSocket
       IntegrationType: AWS_PROXY
-      IntegrationUri: arn:aws:apigateway:${AWS::REGION}:lambda:path/2015-03-31/functions/${OnDisconnectFunction.Arn}/invocations
+      IntegrationUri: !Sub arn:aws:apigateway:${AWS::REGION}:lambda:path/2015-03-31/functions/${OnDisconnectFunction.Arn}/invocations
 
   SendMessageRoute:
     Type: AWS::ApiGatewayV2::Route
@@ -206,7 +206,7 @@ Resources:
     Properties:
       ApiId: !Ref AtbashWebSocket
       IntegrationType: AWS_PROXY
-      IntegrationUri: arn:aws:apigateway:${AWS::REGION}:lambda:path/2015-03-31/functions/${SendMessageFunction.Arn}/invocations
+      IntegrationUri: !Sub arn:aws:apigateway:${AWS::REGION}:lambda:path/2015-03-31/functions/${SendMessageFunction.Arn}/invocations
 
   AtbashWebSocketDeployment:
     Type: AWS::ApiGatewayV2::Deployment
@@ -249,7 +249,7 @@ Resources:
     Properties:
       ApiId: !Ref AtbashREST
       IntegrationType: AWS_PROXY
-      IntegrationUri: arn:aws:apigateway:${AWS::REGION}:lambda:path/2015-03-31/functions/${RegisterFunction.Arn}/invocations
+      IntegrationUri: !Sub arn:aws:apigateway:${AWS::REGION}:lambda:path/2015-03-31/functions/${RegisterFunction.Arn}/invocations
 
   AtbashRESTDeployment:
     Type: AWS::ApiGatewayV2::Deployment
