Added GetMessagesRoute & GetMessagesIntegration to template.yaml

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -326,6 +326,37 @@ Resources:
       IntegrationMethod: POST
       PayloadFormatVersion: '2.0'
 
+  GetMessagesRoute:
+    Type: AWS::ApiGatewayV2::Route
+    Properties:
+      ApiId: !Ref AtbashREST
+      RouteKey: 'GET /message'
+      OperationName: GetMessagesRoute
+      AuthorizationType: NONE
+      Target: !Join
+        - '/'
+        - - 'integrations'
+          - !Ref GetMessagesIntegration
+  GetMessagesIntegration:
+    Type: AWS::ApiGatewayV2::Integration
+    DependsOn:
+      - GetUserMessagesFunction
+    Properties:
+      ApiId: !Ref AtbashREST
+      IntegrationType: AWS_PROXY
+      IntegrationUri: !Join
+        - ''
+        - - 'arn:'
+          - !Ref 'AWS::Partition'
+          - ':apigateway:'
+          - !Ref 'AWS::Region'
+          - ':lambda:path/2015-03-31/functions/'
+          - !GetAtt GetUserMessagesFunction.Arn
+          - '/invocations'
+      IntegrationMethod: GET
+      PayloadFormatVersion: '2.0'
+
+
   AtbashRESTDeployment:
     Type: AWS::ApiGatewayV2::Deployment
     DependsOn:
