Changed AtbashRESTStage to enable auto deployment

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -370,3 +370,4 @@ Resources:
       ApiId: !Ref AtbashREST
       StageName: dev
       DeploymentId: !Ref AtbashRESTDeployment
+      AutoDeploy: true
