--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -383,7 +383,7 @@ Resources:
     Type: AWS::ApiGatewayV2::Route
     Properties:
       ApiId: !Ref AtbashREST
-      RouteKey: 'DELETE /message'
+      RouteKey: 'DELETE /message/{id}'
       OperationName: DeleteMessageRoute
       AuthorizationType: NONE
       Target: !Join
