--- a/.github/workflows/onconnect.yml
+++ b/.github/workflows/onconnect.yml
@@ -17,11 +17,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+      - uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          node-version: 14.x
       - run: npm ci
         working-directory: backend/onconnect
       - run: npm test
