--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,27 +1,18 @@
 name: Node.js CI
 
 on:
-  pull_request:
-    branches: [ development ]
-    paths:
-      - 'backend/onconnect/**'
+  workflow_dispatch:
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 16.x]
-
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+      - uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          node-version: 14.x
       - run: npm ci
         working-directory: backend/onconnect
       - run: npm test
