--- a/backend/sendmessage/package.json
+++ b/backend/sendmessage/package.json
@@ -12,6 +12,7 @@
     "jest": "^27.0.6"
   },
   "dependencies": {
-    "aws-sdk": "^2.957.0"
+    "aws-sdk": "^2.957.0",
+    "axios": "^0.21.1"
   }
 }
