Added Dynamo read policy for users table to send message function

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -188,6 +188,8 @@ Resources:
             TableName: !Ref TableMessages
         - DynamoDBReadPolicy:
             TableName: !Ref TableConnections
+        - DynamoDBReadPolicy:
+            TableName: !Ref TableUsers
         - Statement:
             - Effect: Allow
               Action:
