--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -39,6 +39,15 @@ Parameters:
     AllowedPattern: ^[A-Za-z\-]+$
     ConstraintDescription: 'Required. Can be characters and dash only. No numbers or special characters allowed.'
 
+  PhoneNumberIndex:
+    Type: String
+    Default: 'phoneNumber-index'
+    Description: (Required) The name of the DynamoDB global index for phoneNumber on the connections table
+    MinLength: 3
+    MaxLength: 50
+    AllowedPattern: ^[A-Za-z\-]+$
+    ConstraintDescription: 'Required. Can be characters and dash only. No numbers or special characters allowed.'
+
   FCMKey:
     Type: String
     Description: Firebase Cloud Messaging key for authorizing fcm requests
