Gave SendMessageFunction DynamoDBCrudPolicy for connections table

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -213,7 +213,7 @@ Resources:
       Policies:
         - DynamoDBCrudPolicy:
             TableName: !Ref TableMessages
-        - DynamoDBReadPolicy:
+        - DynamoDBCrudPolicy:
             TableName: !Ref TableConnections
         - DynamoDBReadPolicy:
             TableName: !Ref TableUsers
