--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_local_notifications: ^6.0.0
   rsa_encrypt: ^2.0.0
   flutter_mobx: ^2.0.1
+  country_code_picker: ^2.0.2
 
 dev_dependencies:
   flutter_test:
