--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   rsa_encrypt: ^2.0.0
   flutter_mobx: ^2.0.1
   country_code_picker: ^2.0.2
+  flutter_spinkit: ^5.0.0
 
 dev_dependencies:
   flutter_test:
