--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -52,6 +52,15 @@ Parameters:
     Type: String
     Description: Firebase Cloud Messaging key for authorizing fcm requests
 
+  MediaBucket:
+    Type: String
+    Default: 'atbash-media'
+    Description: (Required) The name of the S3 bucket for temporarily storing media
+    MinLength: 3
+    MaxLength: 50
+    AllowedPattern: ^[A-Za-z\-]+$
+    ConstraintDescription: 'Required. Can be characters and dash only. No numbers or special characters allowed.'
+
 Resources:
   # --- DynamoDB Tables --- #
   ConnectionsTable:
