Added GetRSAPublicKeyFunction and Permission

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -280,6 +280,29 @@ Resources:
       FunctionName: !Ref DeleteMessageFunction
       Principal: apigateway.amazonaws.com
 
+  GetRSAPublicKeyFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: getrsapublickey/
+      Handler: index.handler
+      Runtime: nodejs14.x
+      MemorySize: 128
+      Environment:
+        Variables:
+          TABLE_USERS: !Ref TableUsers
+      Policies:
+        - DynamoDBReadPolicy:
+            TableName: !Ref TableUsers
+
+  GetRSAPublicKeyPermission:
+    Type: AWS::Lambda::Permission
+    DependsOn:
+      - AtbashREST
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName: !Ref GetRSAPublicKeyFunction
+      Principal: apigateway.amazonaws.com
+
   # --- Web Socket API --- #
   AtbashWebSocket:
     Type: AWS::ApiGatewayV2::Api
