--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_mobx: ^2.0.1
   country_code_picker: ^2.0.2
   flutter_spinkit: ^5.0.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
