--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   country_code_picker: ^2.0.2
   flutter_spinkit: ^5.0.0
   intl: ^0.17.0
+  flutter_slidable:
 
 dev_dependencies:
   flutter_test:
