--- a/mobile_ui/pubspec.yaml
+++ b/mobile_ui/pubspec.yaml
@@ -40,6 +40,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/logo.png
+    - assets/1397045.jpg
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
